--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Landing Page - Start Bootstrap Theme</title>
-
+   <title>Rufus - A discord bot</title>
+  <link rel="shortcut icon" href="img/pacmanicon.png">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
