--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-   <title>Rufus - A discord bot</title>
+  <title>Rufus - A discord bot</title>
   <link rel="shortcut icon" href="img/pacmanicon.png">
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -28,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="btn btn-primary" href="commands.html">Invite Bot</a>
+      <a class="btn btn-primary" href="https://discord.com/oauth2/authorize?client_id=740608680835154012&scope=bot&permissions=214682777">Invite Bot</a>
       <a class="navbar-brand" href="#">An Anjan Nair Initiative</a>
       <a class="btn btn-primary" href="commands.html">Commands</a>
     </div>
@@ -153,7 +154,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Rufus. No Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; RufusBot. No Rights Reserved. This site was built using an open sourced template.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
