--- a/commands.html
+++ b/commands.html
@@ -57,7 +57,7 @@
         <div class="col-lg-6 order-lg-2 text-white showcase-img"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h1>COMMANDS</h1>
-          <p class="lead mb-0"> </p>
+          <p class="lead mb-0">The default prefix is *</p>
           &nbsp;
           <h5>FOR MODERATORS:</h5>
           <p class="lead mb-0"> </p>
@@ -78,6 +78,7 @@
           <h7>• PRUNE</h7>
           <p class="lead mb-0">*prune NUMBER - Clears the number of messages</p>
           &nbsp;
+          <p class="lead mb-0"> </p>
           &nbsp;
           <p class="lead mb-0"> </p>
           <h5>MANUALS FOR NEWBIES:</h5>
@@ -85,7 +86,116 @@
           &nbsp;
           <p class="lead mb-0"> </p>
           <h7>• RYTHM BOT</h7>
-          <p class="lead mb-0">1) +p SONG_NAME : Enter this command but replace SONG_NAME with the song you want to play</p>
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0">*rythm</p>
+          &nbsp;
+          <p class="lead mb-0">+p SONG_NAME : Replace SONG_NAME with the one to play</p>
+          &nbsp;
+          <p class="lead mb-0">+fs : Force skips the song</p>
+          &nbsp;
+          <p class="lead mb-0">+skip : Skips the song after taking a vote</p>
+          &nbsp;
+          <p class="lead mb-0">+q : View the queue of songs</p>
+          &nbsp;
+          <p class="lead mb-0">+shuffle : Shuffles the queue</p>
+          &nbsp;
+          <p class="lead mb-0">+lyrics : Provides the lyrics of the song</p>
+          &nbsp;
+          <p class="lead mb-0">+np : Shows what the bot is currently playing</p>
+          &nbsp;
+          <p class="lead mb-0">+seek : Goes to a particular timestamp of the song</p>
+          &nbsp;
+          <p class="lead mb-0">+stop : Stops the song</p>
+          &nbsp;
+          <p class="lead mb-0">+pause : Pauses the song</p>
+          &nbsp;
+          <p class="lead mb-0">+resume : Resumes the song after pausing it</p>
+          &nbsp;
+          <p class="lead mb-0">+loop : Loops the current song</p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          <h7>• DANK MEMER BOT</h7>
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0">*dankbot</p>
+          &nbsp;
+          <p class="lead mb-0">pls meme : Sends a random meme</p>
+          &nbsp;
+          <p class="lead mb-0">pls wholesome : Sends a wholesome meme</p>
+          &nbsp;
+          <p class="lead mb-0">pls pun : Sends a pun</p>
+          &nbsp;
+          <p class="lead mb-0">pls 4chan: A random 4chan quote/meme</p>
+          &nbsp;
+          <p class="lead mb-0">pls antijoke : Sends a non joke text</p>
+          &nbsp;
+          <p class="lead mb-0">pls antiantijoke : Yes you read it right, it's a joke</p>
+          &nbsp;
+          <p class="lead mb-0">pls xkcd : Grabs a random comic from the xkcd website</p>
+          &nbsp;
+          <p class="lead mb-0">pls create : Create a meme using this bot</p>
+          &nbsp;
+          <p class="lead mb-0">pls discordmeme : Sends a random discord themed meme</p>
+          &nbsp;
+          <p class="lead mb-0">pls meirl : Sends a post that you can relate to (well...sometimes)</p>
+          &nbsp;
+          <p class="lead mb-0">For more commands check <a href="https://dankmemer.lol/commands">here</a></p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          <h7>• DISCORD</h7>
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0">*discord</p>
+          &nbsp;
+          <p class="lead mb-0">Watch this video to get a better idea on how discord works</p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/dvHgASyhPSY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          <h5>MISCELLANEOUS</h5>
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0"></p>
+          <h7>• GAMES</h7>
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0">*8ball QUESTION - Ask <a href="https://en.wikipedia.org/wiki/Magic_8-Ball">8ball</a> your question</p>
+          &nbsp;
+          <p class="lead mb-0">*memes - A random meme from reddit!!</p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <h7>• FACTS</h7>
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0">*catfact - A random catfact!</p>
+          &nbsp;
+          <p class="lead mb-0">*fact - A random fact on numbers</p>
+          &nbsp;
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <h7>• OTHERS</h7>
+          <p class="lead mb-0"> </p>
+          &nbsp;
+          <p class="lead mb-0">*qrcode LINK - Generate qrcodes for your link!</p>
+          &nbsp;
+          <p class="lead mb-0">*urban SEARCH - Get definitions from Urban Dictionary</p>
+          &nbsp;
+          <p class="lead mb-0">*dev - The developer of the bot is shown</p>
+          &nbsp;
+          <p class="lead mb-0">*tutorial - All of the above in a glance</p>
         </div>
       </div>
     </div>
