--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </section> -->
 
   <!-- Footer -->
-  <footer class="footer bg-light">
+ <footer class="footer bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
@@ -147,11 +147,11 @@
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
+              <a href="https://www.privacypolicyonline.com/live.php?token=Inhbw14eR1VstSs0N1kpNq35SpRspwTJ">Terms of Use</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <a href="https://www.privacypolicyonline.com/live.php?token=MbE8xUXLq9jvOyR4TrwOZdvYC37cRUC8">Privacy Policy</a>
             </li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; RufusBot. No Rights Reserved. This site was built using an open sourced template.</p>
