Removed commands, added new

--- a/commands.html
+++ b/commands.html
@@ -90,30 +90,6 @@
           &nbsp;
           <p class="lead mb-0">*rythm</p>
           &nbsp;
-          <p class="lead mb-0">+p SONG_NAME : Replace SONG_NAME with the one to play</p>
-          &nbsp;
-          <p class="lead mb-0">+fs : Force skips the song</p>
-          &nbsp;
-          <p class="lead mb-0">+skip : Skips the song after taking a vote</p>
-          &nbsp;
-          <p class="lead mb-0">+q : View the queue of songs</p>
-          &nbsp;
-          <p class="lead mb-0">+shuffle : Shuffles the queue</p>
-          &nbsp;
-          <p class="lead mb-0">+lyrics : Provides the lyrics of the song</p>
-          &nbsp;
-          <p class="lead mb-0">+np : Shows what the bot is currently playing</p>
-          &nbsp;
-          <p class="lead mb-0">+seek : Goes to a particular timestamp of the song</p>
-          &nbsp;
-          <p class="lead mb-0">+stop : Stops the song</p>
-          &nbsp;
-          <p class="lead mb-0">+pause : Pauses the song</p>
-          &nbsp;
-          <p class="lead mb-0">+resume : Resumes the song after pausing it</p>
-          &nbsp;
-          <p class="lead mb-0">+loop : Loops the current song</p>
-          &nbsp;
           <p class="lead mb-0"> </p>
           &nbsp;
           &nbsp;
@@ -123,30 +99,6 @@
           &nbsp;
           <p class="lead mb-0">*dankbot</p>
           &nbsp;
-          <p class="lead mb-0">pls meme : Sends a random meme</p>
-          &nbsp;
-          <p class="lead mb-0">pls wholesome : Sends a wholesome meme</p>
-          &nbsp;
-          <p class="lead mb-0">pls pun : Sends a pun</p>
-          &nbsp;
-          <p class="lead mb-0">pls 4chan: A random 4chan quote/meme</p>
-          &nbsp;
-          <p class="lead mb-0">pls antijoke : Sends a non joke text</p>
-          &nbsp;
-          <p class="lead mb-0">pls antiantijoke : Yes you read it right, it's a joke</p>
-          &nbsp;
-          <p class="lead mb-0">pls xkcd : Grabs a random comic from the xkcd website</p>
-          &nbsp;
-          <p class="lead mb-0">pls create : Create a meme using this bot</p>
-          &nbsp;
-          <p class="lead mb-0">pls discordmeme : Sends a random discord themed meme</p>
-          &nbsp;
-          <p class="lead mb-0">pls meirl : Sends a post that you can relate to (well...sometimes)</p>
-          &nbsp;
-          <p class="lead mb-0">For more commands check <a href="https://dankmemer.lol/commands">here</a></p>
-          &nbsp;
-          <p class="lead mb-0"> </p>
-          &nbsp;
           <p class="lead mb-0"> </p>
           &nbsp;
           <p class="lead mb-0"> </p>
@@ -154,12 +106,6 @@
           <p class="lead mb-0"> </p>
           &nbsp;
           <p class="lead mb-0">*discord</p>
-          &nbsp;
-          <p class="lead mb-0">Watch this video to get a better idea on how discord works</p>
-          &nbsp;
-          <p class="lead mb-0"> </p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/dvHgASyhPSY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <p class="lead mb-0"> </p>
           &nbsp;
           <p class="lead mb-0"> </p>
           &nbsp;
@@ -184,6 +130,8 @@
           &nbsp;
           <p class="lead mb-0">*fact - A random fact on numbers</p>
           &nbsp;
+          <p class="lead mb-0">*interesting - An interesting fact fetched from Reddit</p>
+          &nbsp;
           <p class="lead mb-0"> </p>
           &nbsp;
           <h7>• OTHERS</h7>
@@ -196,6 +144,18 @@
           <p class="lead mb-0">*dev - The developer of the bot is shown</p>
           &nbsp;
           <p class="lead mb-0">*tutorial - All of the above in a glance</p>
+          &nbsp;
+          <p class="lead mb-0">*nasa SEARCH - Search the NASA website</p>
+          &nbsp;
+          <p class="lead mb-0">*img SEARCH - Send random images (NSFW is excluded)</p>
+          &nbsp;
+          <p class="lead mb-0">*person - A random AI generated face is sent of a human</p>
+          &nbsp;
+          <p class="lead mb-0">*rimage - A random AI generated art/image is sent</p>
+          &nbsp;
+          <p class="lead mb-0">*cat - A random AI generated cat is sent</p>
+          &nbsp;
+          <p class="lead mb-0">*gif SEARCH - GIF search from Tenor</p>
         </div>
       </div>
     </div>
