--- a/commands.html
+++ b/commands.html
@@ -78,7 +78,29 @@
           <h7>• PRUNE</h7>
           <p class="lead mb-0">*prune NUMBER - Clears the number of messages</p>
           &nbsp;
-          <p class="lead mb-0"> </p>
+          <p class="lead mb-0"></p>
+          <h7>• ADD ROLE</h7>
+          <p class="lead mb-0">*addrole @USER @ROLE - Add a role for a user</p>
+          &nbsp;
+          <p class="lead mb-0"></p>
+          <h7>• MUTE</h7>
+          <p class="lead mb-0">*mute - Mutes everyone in the voice channel</p>
+          &nbsp;
+          <p class="lead mb-0">*unmute - Unmutes everyone in the voice channel</p>
+          &nbsp;
+          <p class="lead mb-0">*fmute @USER - Force mutes mentioned user</p>
+          &nbsp;
+          <p class="lead mb-0">*funmute @USER - Force unmutes mentioned user</p>
+          &nbsp;
+          <p class="lead mb-0"></p>
+          <h7>• DEAFEN</h7>
+          <p class="lead mb-0">*deafen - Deafens all the users in the voice channel</p>
+          &nbsp;
+          <p class="lead mb-0">*undeafen - Undeafens all the users in the voice channel</p>
+          &nbsp;
+          <p class="lead mb-0">*fdeafen @USER - Deafens only mentioned user in channel</p>
+          &nbsp;
+          <p class="lead mb-0">*fundeafen @USER - Undeafens the mentioned user in the channel</p>
           &nbsp;
           <p class="lead mb-0"> </p>
           <h5>MANUALS FOR NEWBIES:</h5>
@@ -120,6 +142,12 @@
           <p class="lead mb-0">*8ball QUESTION - Ask <a href="https://en.wikipedia.org/wiki/Magic_8-Ball">8ball</a> your question</p>
           &nbsp;
           <p class="lead mb-0">*memes - A random meme from reddit!!</p>
+          &nbsp;
+          <p class="lead mb-0">*amongus maps - HD maps for Among Us</p>
+          &nbsp;
+          <p class="lead mb-0">*amongus info - Very good informative articles for Among Us</p>
+          &nbsp;
+          <p class="lead mb-0">*amongus wiki - Search the Among Us wiki</p>
           &nbsp;
           <p class="lead mb-0"> </p>
           &nbsp;
