--- a/commands.html
+++ b/commands.html
@@ -105,7 +105,7 @@
           &nbsp;
           <p class="lead mb-0"> </p>
           <h7>• WARN</h7>
-          <p class="lead mb-0">*warn @USER - Bans the user from the server</p>
+          <p class="lead mb-0">*warn @USER - Warns the user</p>
           &nbsp;
           <p class="lead mb-0"> </p>
           <h7>• PRUNE</h7>
